# Open-AVB

examples/common/: avb.c  avb.h
examples/gstreamer-avb-plugins/gst-plugin/: aclocal.m4  configure  configure.ac
examples/gstreamer-avb-plugins/gst-plugin/src/: Makefile.am  Makefile.in  gst_avb_playbin.c  gstavb.c  gstavbsink.c
examples/live_stream/: Makefile  listener.c  talker.c
